# PYProject

./: .gitignore  README.md  chroma-test.py  main.py  pyproject.toml  requirements.txt
app/: IntentEnum.py  __init__.py  agent.py  logging_config.py  main.py  models.py  prompts.py  vector_store.py
data/: init_db.py  products.json
frontend/: streamlit_app.py
