[project]
name = "pyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.0.27",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=1.1.15",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
]
